--- a/react-psh-sprint5/src/css/body2.css
+++ b/react-psh-sprint5/src/css/body2.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .all-item-header2 {
@@ -81,6 +82,7 @@
 
 .all-item-list {
     width: 1200px;
+    min-height: 646px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -109,7 +111,6 @@
 .contain-text-product-des {
     width: 100%;
     height: 100%;
-    border-top: 1px solid #DFDFDF;
 }
 
 .all-item-searchBox-container {
@@ -137,6 +138,37 @@
     height: 200px;
     padding-top : 100px;
     text-align: center;
+}
+
+.number-box {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    width: 304px;
+    height: 40px;
+    margin-bottom: 140px;
+}
+
+.buttonNum {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    gap: 12.5px;
+    border-radius: 40px;
+    border: 1px solid #E5E7EB;
+    background-color: white;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 26px;
+}
+
+.buttonNum:hover {
+    background-color: #2F80ED;
+    color : white;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 @media screen and (max-width: 1230px) {
