--- a/react-psh-sprint5/src/css/body2.css
+++ b/react-psh-sprint5/src/css/body2.css
@@ -1,5 +1,3 @@
-@import './reset.css';
-
 .all-item {
     width: 1200px;
     margin: 0 auto;
@@ -12,7 +10,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .all-item-header2 {
@@ -35,7 +32,6 @@
     justify-content: space-between;
     align-items: center;
     gap: 4px;
-
 }
 
 .all-item-searchBox {
@@ -143,6 +139,7 @@
 .number-box {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 auto;
     width: 304px;
     height: 40px;
