--- a/market/src/css/app.css
+++ b/market/src/css/app.css
@@ -33,7 +33,7 @@ header .loginBtn {
   color: var(--gray50);
 }
 header nav {
-  width: 100%;
+  width: 70%;
   height: 100%;
 }
 header nav ul {
@@ -53,6 +53,9 @@ header nav ul li a {
 }
 header .logo {
   margin-right: 24px;
+  width: 153px;
+
+  /* background: url(../../public/img/logo.png) no-repeat center; */
 }
 header .logo img {
   width: 153px;
@@ -76,6 +79,9 @@ header .logo img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.marketSection .titleLine h2 {
+  font-size: 20px;
 }
 .marketSection .titleLine .marketEtc {
   display: flex;
@@ -241,4 +247,79 @@ footer .content .icon {
 }
 footer .content .icon img {
   width: 20px;
+}
+
+@media screen and (max-width: 1199px) {
+  header {
+  }
+  header nav {
+    width: 65%;
+  }
+  header .gnb {
+    max-width: 1199px;
+    padding: 9px 16px;
+    margin: auto;
+  }
+  header .loginBtn {
+  }
+  header .logo {
+    width: 153px;
+  }
+  header .logo img {
+    width: 100%;
+  }
+  .container {
+    max-width: 696px;
+  }
+  .marketSection ul li,
+  .marketSection ul li:nth-of-type(5n) {
+    margin-right: 10px;
+  }
+  .marketSection .titleLine .marketEtc .searchBox {
+    width: 242px;
+  }
+}
+
+@media screen and (max-width: 743px) {
+  header .gnb {
+    max-width: 743x;
+  }
+  header nav {
+    width: 40%;
+  }
+  .container {
+    max-width: 344px;
+  }
+  .marketSection ul {
+    justify-content: center;
+  }
+  .marketSection .titleLine {
+    /* overflow: hidden; */
+    flex-wrap: wrap;
+  }
+  .marketSection .titleLine .marketEtc {
+    position: relative;
+  }
+  .marketSection .titleLine .marketEtc a {
+    position: absolute;
+    bottom: 110%;
+    left: 50%;
+  }
+  .marketSection .titleLine .marketEtc .searchBox {
+    width: 288px;
+    margin-right: 14px;
+  }
+  .marketSection .titleLine .marketEtc select {
+    height: 42px;
+    width: 42px;
+    border-radius: 12px;
+    border: 1px solid #e5e7eb;
+  }
+  .marketSection ul li,
+  .marketSection ul li:nth-of-type(5n) {
+    margin-right: 8px;
+  }
+  .marketSection ul li:nth-of-type(2n) {
+    margin-right: 0;
+  }
 }
