1027작업마무리

--- a/react-psh-sprint5/src/css/Header.css
+++ b/react-psh-sprint5/src/css/Header.css
@@ -56,7 +56,7 @@ header {
     min-width: 110px;
     padding: 21px 15px;
     gap: 10px;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: bold;
     line-height: 35px;
 }
@@ -70,7 +70,7 @@ header {
     min-width: 108px;
     padding: 21px 15px 21px 15px;
     gap: 10px;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: bold;
     line-height: 35px;
 }
