--- a/product/src/component/mainPart.css
+++ b/product/src/component/mainPart.css
@@ -3,8 +3,8 @@
 :root{
     font-size: 10px;
   }
-  
-.title{
+
+  .title{
     font-family: pretendard;
     font-weight: 700;
     font-size: 2rem;
@@ -55,3 +55,10 @@
     display: flex;
     justify-content: space-around;
   } 
+
+  .bestProduct{
+    margin-top: 2%;
+    display: flex;
+    justify-content: space-around;
+  }
+  
