--- a/sprint5/src/styleCom/onSale.css
+++ b/sprint5/src/styleCom/onSale.css
@@ -28,3 +28,54 @@
     display: flex;
     gap: 10px;
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 130px;
+    height: 42px;
+    border: 1px solid #E5E7EB;
+    border-radius: 12px;
+    background-color: white;
+  }
+  
+  .dropdownButton {
+    width: 100%;
+    padding: 12px 20px 12px 20px;
+    border: none;
+    /* 부모 요소 가져옴 */
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .arrow {
+    font-size: 12px;
+  }
+  
+  .dropdownMenu {
+    position: absolute;
+    top: 100%;
+    margin-top: 8px;
+    width: 100%;
+    border: 1px solid #E5E7EB;
+    border-radius: 12px;
+    background-color: white;
+    
+  }
+  
+  .dropdownItem {
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .dropdownItem:hover {
+    background-color: #f5f5f5;
+  }
