--- a/sprint5/src/components/Main.css
+++ b/sprint5/src/components/Main.css
@@ -200,3 +200,22 @@ input::placeholder {
   left: -0.1rem;
   top: -0.2rem;
 }
+
+/* 검색한 상품이 없을 때 */
+#emptyPrdsBox {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.emptyContentBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 50rem;
+  height: 30rem;
+  font-size: 2rem;
+  color: #9CA3AF;
+}
