--- a/react-psh-sprint5/src/css/Header.css
+++ b/react-psh-sprint5/src/css/Header.css
@@ -3,13 +3,13 @@
 .header-contain {
     width: 100%;
     height: 81px;
-    background: #FFFFFF;
+    background: var(--white);
     display: flex;
     position: fixed;
     z-index: 11;
     padding-bottom : 26px;
     align-items: center;
-    border-bottom : 1px solid #DFDFDF;
+    border-bottom : 1px solid var(--color13);
 }
 
 header {
@@ -23,7 +23,7 @@ header {
     margin: 9.5px 200px;
     box-sizing: border-box;
     top: 0px;
-    background: #FFFFFF;
+    background: var(--white);
 
 }
 
@@ -61,7 +61,7 @@ header {
     line-height: 35px;
 }
 .header-text-1:hover, .header-text-2:hover {
-    color : orange;
+    color : var(--color7);
     transition: 0.5s;
 }
 
@@ -74,7 +74,6 @@ header {
     font-weight: bold;
     line-height: 35px;
 }
-
 
 @media screen and (max-width: 1230px) {
     header {
