--- a/pandamarket/sprint5/src/style/footer.css
+++ b/pandamarket/sprint5/src/style/footer.css
@@ -2,5 +2,6 @@ footer {
   display: flex;
   position: relative;
   background-color: #111827;
-  height: 180px;
+  height: 160px;
+  margin-top: 200px;
 }
