--- a/pandamarket/sprint5/src/style/productlist.css
+++ b/pandamarket/sprint5/src/style/productlist.css
@@ -91,12 +91,13 @@
 .sortedProductList__label__box {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .sortedProductList__label__box input {
   width: 250px;
   height: 25px;
-  background-color: rgba(200, 200, 200, 0.5);
+  background-color: #F3F4F6;
   border: 0;
   border-radius: 12px;
   padding-left: 25px;
@@ -116,6 +117,22 @@
 }
 
 .sortedProductList__label__box > div {
-  
+  display: flex;
+  gap: 8px;
+}
+
+.sortedProductList__label__box > div > button,
+.sortedProductList__label__box > div > select {
+  height: 25px;
+}
+
+.sortedProductList__label__box > div > button {
+  background-color: var(--color-blue);
+  font-family: var(--font-pretendard);
+  color: #F3F4F6;
+  border-radius: 8px;
+  font-size: 12px;
+  border: 0;
+  width: 120px;
 }
 
