--- a/market/src/css/app.css
+++ b/market/src/css/app.css
@@ -214,7 +214,7 @@ header .logo img {
 }
 
 footer {
-  margin-top: 140px;
+  /* margin-top: 140px; */
   width: 100%;
   height: 160px;
   padding: 32px 20px;
