중고마켓 추가

--- a/market/src/css/app.css
+++ b/market/src/css/app.css
@@ -72,7 +72,7 @@ header .logo img {
   margin-bottom: 40px;
 }
 .marketSection.sell {
-  margin-bottom: 0;
+  margin-bottom: 140px;
 }
 .marketSection .titleLine {
   margin-bottom: 16px;
