add: 스프린트5 반응형 미디어 쿼리 적용

--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,22 +1,42 @@
+@media (min-width: 1200px) {
+  .card {
+    --card-width: 261px; /* 데스크탑 크기 */
+    --card-height: 370px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 1199.98px) {
+  .card {
+    --card-width: 343px; /* 태블릿 & 모바일 크기 */
+    --card-height: 434px;
+  }
+}
+
 .card {
-  width: 261px;
-  height: 370px;
+  width: var(--card-width);
+  height: var(--card-height);
 }
 
 .image {
-  width: 261px;
-  height: 261px;
+  width: var(--card-width);
+  height: var(--card-width);
   object-fit: cover;
   margin-bottom: 16px;
-}
-
-.details {
 }
 
 .name {
   font-size: 1.4rem;
   line-height: 2.4rem;
   font-weight: 500;
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    line-height: 2rem;
+  }
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    line-height: 2rem;
+  }
 }
 
 .price {
@@ -24,6 +44,15 @@
   font-size: 1.6rem;
   line-height: 4.1rem;
   font-family: Pretendard;
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    line-height: 3.5rem;
+  }
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    line-height: 3.5rem;
+  }
 }
 
 .likes {
