--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -13,15 +13,31 @@
   line-height: 19.09px;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    padding: 0 24px;
+  }
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    padding: 0 24px;
+  }
 }
 
 .copy {
-  color: #9CA3AF;
+  color: #9ca3af;
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    padding: 0 24px;
+    position: absolute;
+    left: 0;
+    bottom: -33px;
+  }
 }
 
 .info {
   width: 145px;
-  color: #E5E7EB;
+  color: #e5e7eb;
   display: flex;
   justify-content: space-between;
 }
