--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,17 +1,31 @@
 .main {
-  padding: 26px 200px;
+  /* padding: 26px 200px; */
+  padding: 26px 0;
   color: #111827;
 }
 
 .container {
   margin: 0 auto;
-  width: 1118px;
-}
 
-.bestItem {
+  /* PC 스타일: 1200px 이상 */
+  @media (min-width: 1200px) {
+    width: 1118px;
+  }
+
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    width: 696px;
+  }
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    width: 100%;
+    max-width: 344px;
+  }
 }
 
 .title {
+  white-space: nowrap;
   font-weight: 700;
   font-size: 2rem;
   margin-bottom: 16px;
@@ -25,6 +39,8 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 24px;
+  flex-wrap: wrap;
+  position: relative;
 }
 
 .toolBox {
@@ -46,6 +62,16 @@
   font-weight: 400;
   font-size: 1.6rem;
   padding: 0 39px 0 13px;
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    width: 242px;
+    font-size: 1.4rem;
+  }
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    max-width: 288px;
+  }
 }
 
 .searchLogo {
@@ -68,6 +94,12 @@
   border-radius: 8px;
   font-size: 1.6rem;
   cursor: pointer;
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    position: absolute;
+    top: 0;
+    right: 45px;
+  }
 }
 
 .select {
@@ -76,4 +108,14 @@
   border-radius: 8px;
   padding: 0 20px;
   font-size: 1.6rem;
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    width: 42px;
+    border-radius: 12px;
+    -webkit-appearance: none; /* Safari와 Chrome */
+    -moz-appearance: none; /* Firefox */
+    appearance: none; /* 나머지 브라우저 */
+    background: url(../../assets/images/ic_sort.png) no-repeat center / 24px;
+  }
 }
