--- a/src/components/ProductList/BestProductList.module.css
+++ b/src/components/ProductList/BestProductList.module.css
@@ -1,5 +1,7 @@
 .productList {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+  /* gap: 24px; */
 }
