--- a/src/components/ProductList/onSalesProductList.module.css
+++ b/src/components/ProductList/onSalesProductList.module.css
@@ -1,7 +1,8 @@
 .productList {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 /* .productList > div {
