BestProdsList id 선택자 class 선택자로 바꿈.

--- a/sprint5/src/components/ProductsInfo.css
+++ b/sprint5/src/components/ProductsInfo.css
@@ -44,14 +44,14 @@ html {
 }
 
 /* Best Products */
-#bestProducts {
+.bestProducts {
   background-color: #FCFCFC;
   width: 28.2rem;
   height: 37.8rem;
   margin-top: 1.6rem;
 }
 
-#bestProsImg {
+.bestProsImg {
   width: 28.2rem;
   height: 28.2rem;
   border-radius: 1.6rem;
