--- a/sprint5/src/pages/ItemsPage/index.css
+++ b/sprint5/src/pages/ItemsPage/index.css
@@ -73,7 +73,7 @@ input {
   border-radius: 1.2rem;
   border: none;
   background-color: #F3F4F6 !important;
-  background: url('../img/icons/Vector.png') no-repeat;
+  background: url('../../img/icons/Vector.png') no-repeat;
   background-size: 1.5rem;
   background-position: 1.2rem;
 }
@@ -88,7 +88,7 @@ input::placeholder {
 }
 
 #addProdButton {
-  background-color: #3692FF;
+  background-color: var(--mainColor);
   width: 13.3rem;
   height: 4.2rem;
   margin-left: 1.2rem;
