--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,5 +1,5 @@
 .pagination {
-  margin-top: ;
+  margin-top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,12 +18,12 @@
   color: #6b7280;
   background-color: #fff;
   cursor: pointer;
-  background: url("../../assets/images/page_left_arrow.png") no-repeat center /
+  background: url("/public/static/images/page_left_arrow.png") no-repeat center /
     7px 10px;
 }
 
 .arrowButton.right {
-  background: url("../../assets/images/page_right_arrow.png") no-repeat center /
+  background: url("/public/static/images/page_right_arrow.png") no-repeat center /
     7px 10px;
 }
 
