fix: ProductList flex 속성 수정

--- a/src/components/ProductList/BestProductList.module.css
+++ b/src/components/ProductList/BestProductList.module.css
@@ -1,7 +1,7 @@
 .productList {
   width: 100%;
   display: flex;
-  /* flex-wrap: wrap; */
-  justify-content: space-between;
-  /* gap: 24px; */
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  gap: 24.6px;
 }
