--- a/src/components/Main/HeroSection.module.css
+++ b/src/components/Main/HeroSection.module.css
@@ -3,7 +3,7 @@
   section.hero_section {
     height: calc(540px - 108px);
   }
-  .hero_box {
+  div.hero_box {
     transform: scale(0.75);
     transform-origin: center bottom;
   }
@@ -14,7 +14,7 @@
   section.hero_section {
     height: calc(540px - 216px);
   }
-  .hero_box {
+  div.hero_box {
     transform: scale(0.6);
     transform-origin: center bottom;
   }
@@ -25,7 +25,7 @@
   section.hero_section {
     height: calc(540px - 180px);
   }
-  .hero_box {
+  div.hero_box {
     height: 600px;
     width: 400px;
     flex-direction: column;
