--- a/src/components/ProductList/BestProductList.module.css
+++ b/src/components/ProductList/BestProductList.module.css
@@ -2,6 +2,19 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-between; */
-  gap: 24.6px;
+
+  /* PC 스타일: 1200px 이상 */
+  @media (min-width: 1200px) {
+    gap: 24.6px;
+  }
+
+  /* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+  @media (min-width: 744px) and (max-width: 1199.98px) {
+    gap: 10px;
+  }
+
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    gap: 0;
+  }
 }
