--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -116,6 +116,10 @@
   border-radius: 8px;
   font-size: 1.6rem;
   cursor: pointer;
+  /* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+  @media (min-width: 375px) and (max-width: 743.98px) {
+    width: 88px;
+  }
 }
 
 .avatar {
