RegisterItemPage, 상품명 심화 요구 사항 완료

--- a/sprint6/src/pages/RegisterItemPage/index.css
+++ b/sprint6/src/pages/RegisterItemPage/index.css
@@ -46,6 +46,10 @@ input:focus {
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
 }
 
+#redBorder {
+  border: 1px solid #F74747;
+}
+
 #prodTagsBox #prodPriceBox #prodIntroBox {
   margin-top: 3.2rem;
 }
