--- a/sprint6/src/pages/HomePage/component/Header/index.css
+++ b/sprint6/src/pages/HomePage/component/Header/index.css
@@ -1,20 +1,3 @@
-:root {
-  /* Gray scale */
-  --gray-900: #1b1d1f;
-  --gray-800: #26282b;
-  --gray-600: #454c53;
-  --gray-500: #72787f;
-  --gray-400: #9ea4a8;
-  --gray-200: #e5e7eb;
-  --gray-100: #e8ebed;
-  --gray-50: #f7f7f8;
-
-  /* Primary color */
-  --mainColor: #3692ff;
-
-  --header-height: 70px;
-}
-
 .nav {
   position: fixed;
   height: 7rem;
@@ -74,7 +57,7 @@
   min-width: 12.8rem;
   height: 4.8rem;
   border-radius: 0.8rem;
-  background-color: var(--mainColor);
+  background-color: #3692FF;
   display: flex;
   justify-content: center;
   align-items: center;
